force-app/main/default/objects/Lead/fields/Account_Matched__c.field-meta.xml
<CustomField>
    <fullName>Account_Matched__c</fullName>
    <description>Formula field, indicating if lead was successfully matched to an Account Record</description>
    <formula>Not(IsBlank(AccountId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Matched</label>
    <type>Checkbox</type>
</CustomField>