force-app/main/default/objects/Lead/fields/Actively_Worked__c.field-meta.xml
<CustomField>
    <fullName>Actively_Worked__c</fullName>
    <formula>TODAY () - Last_Sales_Activity__c &lt;= 45</formula>
    <label>Actively Worked?</label>
    <type>Checkbox</type>
</CustomField>