force-app/main/default/objects/Lead/fields/Add_Payment_Method_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>Add_Payment_Method_Last_90d__c</fullName>
    <inlineHelpText>#times a user added a payment method in Oyster platform over the last 90 days</inlineHelpText>
    <label>#Add Payment Method (Last 90d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>