force-app/main/default/objects/Lead/fields/Admin_comment__c.field-meta.xml
<CustomField>
    <fullName>Admin_comment__c</fullName>
    <label>Admin comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>