force-app/main/default/objects/Lead/fields/Auto_Booked__c.field-meta.xml
<CustomField>
    <fullName>Auto_Booked__c</fullName>
    <description>Auto checked if the Lead Source is &quot;Qualified_Chat&quot; and the Owner is Alex Berry or any AE&apos;s. Also checked if Booking Status = &quot;Booked&quot;</description>
    <formula>OR(
    AND (
        ISPICKVAL(LeadSource, &apos;Qualified_Chat&apos;),
        OR (
            Owner:User.Alias = &quot;aberr&quot;,
            CONTAINS(Owner:User.UserRole.Name , &apos;AE&apos;)
        )
    ),
Booking_Status_CP__c = &quot;Booked&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto checked if the Lead Source is &quot;Qualified_Chat&quot; and the Owner is Alex Berry or any AE&apos;s.  Also checked if Booking Status = &quot;Booked&quot;</inlineHelpText>
    <label>Auto-Booked</label>
    <type>Checkbox</type>
</CustomField>