force-app/main/default/objects/Lead/fields/Automatically_Enrolled_in_a_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Enrolled_in_a_Cadence__c</fullName>
    <description>Set with the automated enrolment, description of the process.</description>
    <label>Automatically Enrolled in a Cadence</label>
    <length>200</length>
    <type>Text</type>
</CustomField>