force-app/main/default/objects/Lead/fields/BDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>BDR_Notes__c</fullName>
    <description>For BDRs to add any note related to Lead Status (when closed)</description>
    <inlineHelpText>Add any useful info to explain why you moved it to Close Status</inlineHelpText>
    <label>BDR Notes (Closed Status)</label>
    <type>TextArea</type>
</CustomField>