force-app/main/default/objects/Lead/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced</label>
    <type>Checkbox</type>
</CustomField>