force-app/main/default/objects/Lead/fields/Campaign_population_for_Ascent__c.field-meta.xml
<CustomField>
    <fullName>Campaign_population_for_Ascent__c</fullName>
    <label>Campaign population for Ascent</label>
    <type>TextArea</type>
</CustomField>