force-app/main/default/objects/Lead/fields/Campaign_referrence__c.field-meta.xml
<CustomField>
    <fullName>Campaign_referrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign referrence</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>