force-app/main/default/objects/Lead/fields/Clearbit__c.field-meta.xml
<CustomField>
    <fullName>Clearbit__c</fullName>
    <label>Clearbit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>