force-app/main/default/objects/Lead/fields/Clearbit_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Last_Modified__c</fullName>
    <description>Timestamp indicating when Clearbit last synced new data to this record.</description>
    <label>Clearbit Last Modified</label>
    <type>DateTime</type>
</CustomField>