force-app/main/default/objects/Lead/fields/Commercial_Model_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model_of_Interest__c</fullName>
    <label>Commercial Model of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Co-Marketing</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Perks Marketplace</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>