force-app/main/default/objects/Lead/fields/Company_Headquarters_Partnerships__c.field-meta.xml
<CustomField>
    <fullName>Company_Headquarters_Partnerships__c</fullName>
    <label>Company Headquarters (Partnerships)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>