force-app/main/default/objects/Lead/fields/Company_Segment__c.field-meta.xml
<CustomField>
    <fullName>Company_Segment__c</fullName>
    <formula>IF(ISBLANK(NumberOfEmployees) || NumberOfEmployees = 0, &quot;Unknown&quot;,
IF(NumberOfEmployees &lt; 100, &quot;Start-Up&quot;,
IF(NumberOfEmployees &gt;= 100 &amp;&amp; NumberOfEmployees &lt;= 249, &quot;SMB&quot;,
IF(NumberOfEmployees &gt;= 250 &amp;&amp; NumberOfEmployees &lt;= 1000, &quot;Mid-Market&quot;,
&quot;Enterprise&quot;
)
)
)
)</formula>
    <label>Company Segment</label>
    <type>Text</type>
</CustomField>