force-app/main/default/objects/Lead/fields/Contractor_Conversion_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Conversion_Timeline__c</fullName>
    <description>Form field on the Contractor Conversion landing page that indicates how quickly the contact wants to convert a contractor</description>
    <inlineHelpText>Form field on the Contractor Conversion landing page that indicates how quickly the contact wants to convert a contractor</inlineHelpText>
    <label>Contractor Conversion Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As soon as possible, I have a candidate ready to be converted</fullName>
            </value>
            <value>
                <fullName>I&apos;ll be ready to convert my contractor(s) in a few weeks</fullName>
            </value>
            <value>
                <fullName>I&apos;m exploring, I&apos;ll be ready to convert contractor(s) in the near future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>