force-app/main/default/objects/Lead/fields/Contractor_Hires_Submitted_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Hires_Submitted_Last_90d__c</fullName>
    <inlineHelpText>#contractor hires submitted in Oyster platform over the last 90 days</inlineHelpText>
    <label>#Contractor Hires Submitted (Last 90d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>