force-app/main/default/objects/Lead/fields/Contractors_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Contractors_to_Convert__c</fullName>
    <description>Form field in the Contractor Conversion Landing Page to understand how many contractors the contact wants to convert</description>
    <inlineHelpText>Form field in the Contractor Conversion Landing Page to understand how many contractors the contact wants to convert</inlineHelpText>
    <label>Contractors to Convert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5 contractors</fullName>
            </value>
            <value>
                <fullName>More than 5 contractors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>