force-app/main/default/objects/Lead/fields/Conversion_Page__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Page__c</fullName>
    <description>The last page where a lead submitted a form on oysterhr.com</description>
    <label>Conversion Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>