force-app/main/default/objects/Lead/fields/Countries_where_services_needed__c.field-meta.xml
<CustomField>
    <fullName>Countries_where_services_needed__c</fullName>
    <description>Self-submitted by Prospect or checked by the rep list of countries, where Oyster services are considered.</description>
    <inlineHelpText>Please mark all the countries where services are considered by the prospect.</inlineHelpText>
    <label>Countries where services needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>