force-app/main/default/objects/Lead/fields/Countries_Y_All__c.field-meta.xml
<CustomField>
    <fullName>Countries_Y_All__c</fullName>
    <label>Countries y&apos;all</label>
    <length>255</length>
    <type>Text</type>
</CustomField>