force-app/main/default/objects/Lead/fields/CountriesHiringIn__c.field-meta.xml
<CustomField>
    <fullName>CountriesHiringIn__c</fullName>
    <label>Countries Hiring In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>