force-app/main/default/objects/Lead/fields/CountriesHiringIn_old__c.field-meta.xml
<CustomField>
    <fullName>CountriesHiringIn_old__c</fullName>
    <inlineHelpText>Response from Demo Request auto-follow up email</inlineHelpText>
    <label>Countries Hiring In (old)</label>
    <type>TextArea</type>
</CustomField>