force-app/main/default/objects/Lead/fields/Country_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Country_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of the Auto Lead Assignment project at request of Alex R. At time of creation, t is automatically set by the &quot;Invocable - Assign Country to Lead&quot; flow which is called from the &quot;Lead Processes&quot; process in Process Builder.</description>
    <inlineHelpText>Lookup field to the Country object. Automatically assigned.</inlineHelpText>
    <label>Country (Lookup)</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>