force-app/main/default/objects/Lead/fields/cp_route__c.field-meta.xml
<CustomField>
    <fullName>cp_route__c</fullName>
    <label>cp_route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>