force-app/main/default/objects/Lead/fields/Created_By_Helper__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Helper__c</fullName>
    <description>Helper field for reporting. First and Last Name of the User who created the record.</description>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Helper field for reporting. First and Last Name of the User who created the record.</inlineHelpText>
    <label>Created By (Helper)</label>
    <type>Text</type>
</CustomField>