force-app/main/default/objects/Lead/fields/Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formula__c</fullName>
    <description>Used for mapping to the contact on conversion</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Formula</label>
    <type>DateTime</type>
</CustomField>