force-app/main/default/objects/Lead/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables Sales to track who is currently serving the account - to be used to run campaigns with accounts served by competitors</description>
    <inlineHelpText>If the prospect is currently working with one of Oyster&apos;s competitors, add it here</inlineHelpText>
    <label>Current Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Current Provider)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>