force-app/main/default/objects/Lead/fields/Days_Active_in_Platform_Last_30d__c.field-meta.xml
<CustomField>
    <fullName>Days_Active_in_Platform_Last_30d__c</fullName>
    <inlineHelpText>#days user was active in Oyster platform over the last 30 days</inlineHelpText>
    <label>#Days Active in Platform (Last 30d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>