force-app/main/default/objects/Lead/fields/Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request__c</fullName>
    <description>Yes if lead has submitted a &quot;Speak to an Expert&quot; form</description>
    <label>Demo Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>