force-app/main/default/objects/Lead/fields/Demo_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request_Date__c</fullName>
    <description>Updates the last time a demo was requested</description>
    <inlineHelpText>Last date of a demo request</inlineHelpText>
    <label>Demo Request Date</label>
    <type>Date</type>
</CustomField>