force-app/main/default/objects/Lead/fields/Email_Provider__c.field-meta.xml
<CustomField>
    <fullName>Email_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enriched from Clearbit. Indicates whether the email domain is associated with a free email provider (ex: Gmail). Used for identifying work emails</description>
    <label>Email Provider</label>
    <type>Checkbox</type>
</CustomField>