force-app/main/default/objects/Lead/fields/Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range__c</fullName>
    <description>Enriched from Clearbit</description>
    <inlineHelpText>Enriched from Clearbit</inlineHelpText>
    <label>Employee Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-250</fullName>
            </value>
            <value>
                <fullName>251-1K</fullName>
            </value>
            <value>
                <fullName>1K-5K</fullName>
            </value>
            <value>
                <fullName>5K-10K</fullName>
            </value>
            <value>
                <fullName>10K-50K</fullName>
            </value>
            <value>
                <fullName>50K-100K</fullName>
            </value>
            <value>
                <fullName>100K+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>