force-app/main/default/objects/Lead/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <description>An estimate of the company&apos;s annual revenue by range. Enriched by Clearbit.</description>
    <inlineHelpText>An estimate of the company&apos;s annual revenue by range. Enriched by Clearbit.</inlineHelpText>
    <label>Estimated Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0-$1M</fullName>
            </value>
            <value>
                <fullName>$1M-$10M</fullName>
            </value>
            <value>
                <fullName>$10M-$50M</fullName>
            </value>
            <value>
                <fullName>$50M-$100M</fullName>
            </value>
            <value>
                <fullName>$100M-$250M</fullName>
            </value>
            <value>
                <fullName>$250M-$500M</fullName>
            </value>
            <value>
                <fullName>$500M-$1B</fullName>
            </value>
            <value>
                <fullName>$1B-$10B</fullName>
            </value>
            <value>
                <fullName>$10B+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>