force-app/main/default/objects/Lead/fields/First_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date__c</fullName>
    <description>Populated by Process Builder when a task/event is related to the lead or when the lead status changes.</description>
    <label>First Activity Date</label>
    <type>Date</type>
</CustomField>