force-app/main/default/objects/Lead/fields/First_Assigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Assigned_Date_Time__c</fullName>
    <description>Stamped the first time the lead&apos;s owner changes.</description>
    <label>First Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>