force-app/main/default/objects/Lead/fields/First_Page__c.field-meta.xml
<CustomField>
    <fullName>First_Page__c</fullName>
    <description>First page the person visited on your website. Set automatically by Hubspot.</description>
    <label>First Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>