force-app/main/default/objects/Lead/fields/FTE_Hires_Submitted_Last_90d__c.field-meta.xml
<CustomField>
    <fullName>FTE_Hires_Submitted_Last_90d__c</fullName>
    <inlineHelpText>#FTE hires submitted in Oyster platform over the last 90 days</inlineHelpText>
    <label>#FTE Hires Submitted (Last 90d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>