force-app/main/default/objects/Lead/fields/FTEs_or_Contractors_in_other_countries__c.field-meta.xml
<CustomField>
    <fullName>FTEs_or_Contractors_in_other_countries__c</fullName>
    <description>Set in HubSpot on form submission.</description>
    <inlineHelpText>The prospect provided this information through a form. 
Full question: Is your company hiring full-time employees or contractors in other countries?</inlineHelpText>
    <label>FTEs or Contractors in other countries?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>