force-app/main/default/objects/Lead/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <length>30</length>
    <type>Text</type>
</CustomField>