force-app/main/default/objects/Lead/fields/Funding_Raised__c.field-meta.xml
<CustomField>
    <fullName>Funding_Raised__c</fullName>
    <description>The total amount of funding raised by the company. Enriched by Clearbit.</description>
    <inlineHelpText>The total amount of funding raised by the company. Enriched by Clearbit.</inlineHelpText>
    <label>Funding Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>