force-app/main/default/objects/Lead/fields/Gong__Current_Flow_ID__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_ID__c</fullName>
    <label>Current Flow ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>