force-app/main/default/objects/Lead/fields/Gong__Current_Flow_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_User_Name__c</fullName>
    <label>Current Flow User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>