force-app/main/default/objects/Lead/fields/Hires_and_Start_Date_CP__c.field-meta.xml
<CustomField>
    <fullName>Hires_and_Start_Date_CP__c</fullName>
    <description># Hires and Start Date from Chili Piper</description>
    <inlineHelpText># Hires and Start Date from Chili Piper</inlineHelpText>
    <label># Hires and Start Date (CP)</label>
    <type>TextArea</type>
</CustomField>