force-app/main/default/objects/Lead/fields/Hiring_Outside_HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Outside_HQ_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Box is checked if HQ location differs from ‘Countries Hiring In’</inlineHelpText>
    <label>Hiring Outside HQ Country</label>
    <type>Checkbox</type>
</CustomField>