force-app/main/default/objects/Lead/fields/Hiring_Outside_HQ_Country_CP__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Outside_HQ_Country_CP__c</fullName>
    <description>Hiring Outside HQ Country from Chili Piper</description>
    <inlineHelpText>Hiring Outside HQ Country from Chili Piper</inlineHelpText>
    <label>Hiring Outside HQ Country (CP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>