force-app/main/default/objects/Lead/fields/HubSpot_Helper__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Helper__c</fullName>
    <description>A helper field that allows to quickly replicate segmentation from HubSpot.</description>
    <inlineHelpText>A helper field that allows to quickly replicate segmentation from HubSpot.</inlineHelpText>
    <label>HubSpot Helper</label>
    <length>99</length>
    <type>Text</type>
</CustomField>