force-app/main/default/objects/Lead/fields/Ignore_SRR_Qualified_Chat__c.field-meta.xml
<CustomField>
    <fullName>Ignore_SRR_Qualified_Chat__c</fullName>
    <description>Automatically checked if Lead Source = &quot;Chat&quot; and Lead Owner Role contains &quot;BDR&quot;. For use in the Lead - Delay Auto</description>
    <formula>IF (
   AND (
      Lead_Type__c = &quot;Chat&quot;,
      CONTAINS(Owner:User.UserRole.Name, &quot;BDR&quot;)
   ),
   true,
   false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ignore SRR (Qualified Chat)</label>
    <type>Checkbox</type>
</CustomField>