force-app/main/default/objects/Lead/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <description>HubSpot provides an IP country for leads with registered form submissions.</description>
    <inlineHelpText>Lead IP Country</inlineHelpText>
    <label>IP Country</label>
    <length>99</length>
    <type>Text</type>
</CustomField>