force-app/main/default/objects/Lead/fields/IP_State__c.field-meta.xml
<CustomField>
    <fullName>IP_State__c</fullName>
    <description>HubSpot provided IP state, established on form submission.</description>
    <inlineHelpText>Lead IP State</inlineHelpText>
    <label>IP State</label>
    <length>99</length>
    <type>Text</type>
</CustomField>