force-app/main/default/objects/Lead/fields/IP_Timezone__c.field-meta.xml
<CustomField>
    <fullName>IP_Timezone__c</fullName>
    <description>Set by HubSpot on form submission, this is HubSpot default data point.</description>
    <inlineHelpText>This is the lead timezone recognized on form submission, be mindful of location changes and VPN usage.</inlineHelpText>
    <label>IP Timezone</label>
    <length>150</length>
    <type>Text</type>
</CustomField>