force-app/main/default/objects/Lead/fields/Is_Freemail__c.field-meta.xml
<CustomField>
    <fullName>Is_Freemail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value set in HubSpot with a workflow.</description>
    <inlineHelpText>Set if the domain was identified as a free email provided.</inlineHelpText>
    <label>Is Freemail?</label>
    <type>Checkbox</type>
</CustomField>