force-app/main/default/objects/Lead/fields/Last_LinkedIn_Pilot_Chat__c.field-meta.xml
<CustomField>
    <fullName>Last_LinkedIn_Pilot_Chat__c</fullName>
    <description>Set in LeanData on recognized chat-sourced lead in LI Pilot Chat experience.</description>
    <label>Last LinkedIn Pilot Chat</label>
    <type>Date</type>
</CustomField>