force-app/main/default/objects/Lead/fields/Last_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity__c</fullName>
    <description>Help Text: Date of the last sales activity logged on the lead.  Does not include marketing emails.</description>
    <formula>IF(DATEVALUE(Last_Sales_Event__c) &gt; BLANKVALUE(Last_Sales_Task__c,DATE(1970,1,1)), DATEVALUE(Last_Sales_Event__c), Last_Sales_Task__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sales Activity</label>
    <type>Date</type>
</CustomField>